--- a/app/src/main/res/layout/item_main_left.xml
+++ b/app/src/main/res/layout/item_main_left.xml
@@ -1,8 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 
-
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/my_image_view"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="50dp"
+        android:src="@mipmap/r"
+        android:layout_marginLeft="30dp"
+        app:failureImageScaleType="centerInside"
+        app:placeholderImage="@mipmap/r"
+        app:roundAsCircle="true"
+        app:roundedCornerRadius="2dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="dom4j"
+        android:textSize="20sp"
+        android:textColor="#ff0000"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="20dp"/>
 
 </LinearLayout>
