--- a/app/src/main/res/color/seleter.xml
+++ b/app/src/main/res/color/seleter.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_checked="true"
+        android:color="@color/colorAccent"></item> <!-- selected颜色 -->
     <item android:state_pressed="true"
         android:color="@color/colorAccent"/> <!-- pressed颜色 -->
     <item android:color="@color/colorPrimary"/> <!-- default颜色 -->
