--- a/app/src/main/res/layout/item_main_left.xml
+++ b/app/src/main/res/layout/item_main_left.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Red"
+        android:text="J.Red"
         android:textSize="20sp"
         android:textColor="#000"
         android:layout_alignParentRight="true"
