--- a/app/src/main/res/layout/activity_meizi.xml
+++ b/app/src/main/res/layout/activity_meizi.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/lightgrey"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
     <include layout="@layout/view_toolbar"/>
@@ -11,6 +11,7 @@
     <ImageView android:id="@+id/iv_meizi"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/lightgrey"
         android:scaleType="fitCenter"
         android:transitionName="shareView"/>
 
