--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -43,13 +44,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_below="@+id/item_daily_time"/>
-
             </RelativeLayout>
         </android.support.v4.widget.NestedScrollView>
 
         <!--</FrameLayout>-->
 
     </android.support.v4.widget.SwipeRefreshLayout>
+    <include layout="@layout/view_dialog"/>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_calender"
         android:layout_margin="20dp"
